--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <div id="app" class='container'>lol</div>
+    <div id="app" class='container'></div>
 
     <script src="app.js"></script>
 </body>
